This commit include requirements.txt file

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# Environments
+.env
+.venv
+venv/
+env/
+ENV/
+env.bak/
+venv.bak/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
